# life-os

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 202603260001_create_raw_logs.sql  202603260002_create_ai_runs_and_action_plans.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/connectors/: mod.rs
backend/src/connectors/feishu/: mod.rs
backend/src/connectors/telegram/: mod.rs
backend/src/connectors/wechat_bridge/: mod.rs
backend/src/domain/: ai.rs  mod.rs  raw_logs.rs
backend/src/http/: mod.rs
backend/src/http/dto/: logs.rs
backend/src/http/routes/: logs.rs
backend/src/repository/: ai_runs.rs  mod.rs  raw_logs.rs
backend/src/service/: ai.rs  raw_logs.rs
backend/src/validation/: logs.rs
frontend/: .env.example  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/api/: ai.test.ts  ai.ts  logs.test.ts  logs.ts
frontend/src/components/: AiRunResultCard.test.tsx  AiRunResultCard.tsx  LogImportForm.test.tsx  LogImportForm.tsx  LogInputForm.test.tsx  LogInputForm.tsx  RawLogDetail.test.tsx  RawLogDetail.tsx  RawLogsTable.test.tsx  RawLogsTable.tsx  rawLogLabels.ts
frontend/src/pages/: AiConsolePage.test.tsx  AiConsolePage.tsx  InputPage.tsx  RawLogsPage.test.tsx  RawLogsPage.tsx
frontend/src/test/: setup.ts
testdata/: import-raw-logs.csv.json  import-raw-logs.json  raw-logs.csv
